# specfoundry

./: .gitignore  LICENSE  README.md  pyproject.toml
specfoundry/: __init__.py  checkpoint.py  cli.py  ir.py  orchestrator.py  repo_manager.py  state_machine.py  utils.py
specfoundry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
specfoundry/llm/: anthropic_client.py  base.py  local_client.py  openai_client.py
specfoundry/phases/: composer.py  consistency_checker.py  dot_generator.py  handoff.py  interview.py  planner.py
